--- a/src/components/ui/Sidebar/Sidebar.scss
+++ b/src/components/ui/Sidebar/Sidebar.scss
@@ -201,7 +201,7 @@
     background: $background-alternate;
     transform: translateX(-100%);
     transition: all $time;
-    padding: $scale-xl-7 var(--gap);
+    padding: $scale-xl-7 var(--gap) var(--gap) var(--gap);
 
     .sidebar.open & {
       transform: translateX(0%);
@@ -211,8 +211,6 @@
       transform: translateX(-100%);
     }
   }
-
- 
 
   nav {
     display: flex;
@@ -225,6 +223,7 @@
   
     @include respond(mobile) {
       justify-content: center;
+      align-items: stretch;
     }
   
     & > ul {
@@ -234,9 +233,9 @@
       display: flex;
       flex-direction: column;
       gap: $scale-xs;
-  
-      @include respond(mobile) {
-        gap: var(--gap);
+
+      & > li {
+        padding-bottom: 0;
       }
     }
   }
@@ -254,6 +253,8 @@
 
     @include respond(mobile) {
       padding-bottom: 0;
+      align-items: stretch;
+      gap: $scale-lg;
     }
 
     small {
